--- a/data/Stone of Kord.wiki
+++ b/data/Stone of Kord.wiki
@@ -5,3 +5,5 @@ A perfectly spherical stone with a transluscent glean like that of polished gran
 AC 35
 
 when broken, the god [Kord] will emerge in a flash of blinding light and booming thunder, and challenge the foe(s) who managed to smash the stone.
+
+20lbs, about the size of a bowling ball
