adding luthadel notes

--- a/data/Kunark.wiki
+++ b/data/Kunark.wiki
@@ -6,6 +6,7 @@ Other regions of interest include
     -[Mines of House Zasheir] - 
     -[Plantation of House Zolis] - where the evil group and refugees began
     -[The Ash Mount] - Volcano where Gruumsh is sealed (large body seemingly melted into the inner rock of the volcano)
+    -[Southern Luthadel Dock]
 
 Wildlife of Kunark (monster manual): 
     [Mistwraith]
