--- a/data/Luthadel.wiki
+++ b/data/Luthadel.wiki
@@ -15,6 +15,9 @@ Primarily speak Draconic, but speak common to Skaa.
 Skaa are the poor people, often enslaved conquored people, or prisoners who are non-iksar common races. (commoners)
 Many live in underground criminal thieving groups, that are saught by the heavy eyes of Steel Inquisitors
 
+20ft tall walls
+100ft clearcut around the walls
+
 ++++Major noble houses:
 [House Salazar](rich, powerful, largest militarized nobility, does specialized assassination work) 
 [House Zasheir] (rich, mining mithril and "other" (etherium) metals with hundreds of skaa)
