--- a/data/Execution of Quaal.wiki
+++ b/data/Execution of Quaal.wiki
@@ -7,3 +7,5 @@ Speech by a brother of the [Order of Steel]
 
 3 brothers, a [Steel Inquisitor] executioner with a great axe
 2 other steel inquisitors are present
+
+6 more inquisitors with wings appeared due to hightened alarm
