adding evil group notes

--- a/OneWiki.wiki
+++ b/OneWiki.wiki
@@ -5,7 +5,7 @@ data_dir = data
 wikiwidehistory_maxentries = 100
 footnotes_as_wikiwords = False
 indexsearch_enabled = False
-last_wiki_word = Venril Sathir
+last_wiki_word = Gruumsh
 hotkey_showhide_bywiki = 
 log_window_autoshow = Gray
 filestorage_identity_filenamemustmatch = False
@@ -28,7 +28,7 @@ wiki_lasttabssubctrls = textedit
 template_pagenamesre = ^template/
 wikipagetitle_creationmode = 1
 tabhistory_maxentries = 25
-tree_expandednodes_descriptorpathes_main = wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Erky,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Towns,wikipage/Kunark;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/The God Kings Palace;wikipage/OneWiki,wikipage/Players,wikipage/Group Three Notes,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Gods,wikipage/Lolth,wikipage/Luthadel,wikipage/The God Kings Palace;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar,wikipage/House Salazar Assassins;wikipage/OneWiki,wikipage/Dungeons,wikipage/Ak'anon Mines,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Items of Importance,wikipage/Kunark,wikipage/Southern Luthadel Dock;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Rex The Smasher;wikipage/OneWiki,wikipage/Characters,wikipage/Don Kreig,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Feywild Towns,wikipage/Tajuru,wikipage/Eladian,wikipage/Edan;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Venril Sathir;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of Steel,wikipage/Steel Inquisitor;wikipage/OneWiki,wikipage/Feywild,wikipage/Feywild Towns,wikipage/Tajuru,wikipage/Korro Kurro;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/House Salazar;wikipage/OneWiki,wikipage/Players,wikipage/Quinn;wikipage/OneWiki,wikipage/Feywild Towns,wikipage/Tajuru,wikipage/Korro Kurro;wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Gimble,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Characters;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Gorda;wikipage/OneWiki,wikipage/Dungeons,wikipage/Cave to Feywild;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes;wikipage/OneWiki,wikipage/Players,wikipage/Edan,wikipage/Elliorra;wikipage/OneWiki,wikipage/Feywild Towns,wikipage/Otis,wikipage/Materials of Legendary Craftsmen;wikipage/OneWiki,wikipage/Towns,wikipage/Felwithe,wikipage/Oliander;wikipage/OneWiki,wikipage/Towns,wikipage/Faydwer;wikipage/OneWiki,wikipage/Towns,wikipage/Arabasta,wikipage/Nogg,wikipage/Arabasta;wikipage/OneWiki,wikipage/Characters,wikipage/Dun Morhen,wikipage/Roc Training Notebook;wikipage/OneWiki;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Order of Steel,wikipage/Steel Inquisitor,wikipage/Luthadel;wikipage/OneWiki,wikipage/Towns;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Ak'anon,wikipage/Orla;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Norrath;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Order of Steel;wikipage/OneWiki,wikipage/Items of Importance;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Norrath,wikipage/Kunark;wikipage/OneWiki,wikipage/Feywild Towns,wikipage/Tajuru,wikipage/Eladian;wikipage/OneWiki,wikipage/Feywild Towns,wikipage/Otis,wikipage/Conflicts of the Neogi;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Tajuru;wikipage/OneWiki,wikipage/AkumaFruits,wikipage/Leeran;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel,wikipage/House Stayanoga;wikipage/OneWiki,wikipage/Gods,wikipage/Lolth,wikipage/Luthadel;wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Namfoodle,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Steel Inquisitor,wikipage/Order of Steel;wikipage/OneWiki,wikipage/AkumaFruits,wikipage/Leeran,wikipage/Sentient Rock Henry;wikipage/OneWiki,wikipage/Towns,wikipage/Nowa Huta,wikipage/Cave to Feywild;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar,wikipage/House Salazar Assassins,wikipage/Kalas;wikipage/OneWiki,wikipage/Quests;wikipage/OneWiki,wikipage/Items of Importance,wikipage/Kunark,wikipage/Southern Luthadel Dock,wikipage/Luthadel;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel,wikipage/House Stayanoga,wikipage/Luthadel;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel;wikipage/OneWiki,wikipage/Feywild Towns,wikipage/Korro Kurro,wikipage/Queen Torgga,wikipage/Korro Kurro;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Order of Steel,wikipage/Steel Inquisitor;wikipage/OneWiki,wikipage/Vehicles;wikipage/OneWiki,wikipage/Players,wikipage/Group Three Notes,wikipage/Marine HQ,wikipage/Marines;wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Namfoodle,wikipage/Ak'anon,wikipage/Namfoodle;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Gorda,wikipage/Leeran;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel,wikipage/Norrath;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel,wikipage/Execution of Quaal;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Krieger,wikipage/AkumaFruits
+tree_expandednodes_descriptorpathes_main = wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Erky,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Towns,wikipage/Kunark;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/The God Kings Palace;wikipage/OneWiki,wikipage/Players,wikipage/Group Three Notes,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Gods,wikipage/Lolth,wikipage/Luthadel,wikipage/The God Kings Palace;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar,wikipage/House Salazar Assassins;wikipage/OneWiki,wikipage/Characters,wikipage/Venril Sathir,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Quaal,wikipage/Venril Sathir,wikipage/Luthadel;wikipage/OneWiki,wikipage/Dungeons,wikipage/Ak'anon Mines,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Items of Importance,wikipage/Kunark,wikipage/Southern Luthadel Dock;wikipage/OneWiki,wikipage/Characters,wikipage/Don Kreig,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Feywild Towns,wikipage/Tajuru,wikipage/Eladian,wikipage/Edan;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Venril Sathir;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of Steel,wikipage/Steel Inquisitor;wikipage/OneWiki,wikipage/Feywild,wikipage/Feywild Towns,wikipage/Tajuru,wikipage/Korro Kurro;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/House Salazar;wikipage/OneWiki,wikipage/Feywild Towns,wikipage/Otis,wikipage/Conflicts of the Neogi;wikipage/OneWiki,wikipage/Characters,wikipage/Venril Sathir,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Quaal,wikipage/Venril Sathir;wikipage/OneWiki,wikipage/Feywild Towns,wikipage/Tajuru,wikipage/Korro Kurro;wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Gimble,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Gorda;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes;wikipage/OneWiki,wikipage/Characters,wikipage/Venril Sathir,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Quaal;wikipage/OneWiki,wikipage/Players,wikipage/Edan,wikipage/Elliorra;wikipage/OneWiki,wikipage/Dungeons;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel;wikipage/OneWiki,wikipage/Feywild Towns,wikipage/Otis,wikipage/Materials of Legendary Craftsmen;wikipage/OneWiki,wikipage/Towns,wikipage/Felwithe,wikipage/Oliander;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Rex The Smasher;wikipage/OneWiki,wikipage/Towns,wikipage/Faydwer;wikipage/OneWiki,wikipage/Towns,wikipage/Arabasta,wikipage/Nogg,wikipage/Arabasta;wikipage/OneWiki,wikipage/Characters,wikipage/Dun Morhen,wikipage/Roc Training Notebook;wikipage/OneWiki,wikipage/Players,wikipage/Quinn;wikipage/OneWiki;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Order of Steel,wikipage/Steel Inquisitor,wikipage/Luthadel;wikipage/OneWiki,wikipage/Towns;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Ak'anon,wikipage/Orla;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Norrath;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Order of Steel;wikipage/OneWiki,wikipage/Items of Importance;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Norrath,wikipage/Kunark;wikipage/OneWiki,wikipage/Feywild Towns,wikipage/Tajuru,wikipage/Eladian;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Tajuru;wikipage/OneWiki,wikipage/AkumaFruits,wikipage/Leeran;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel,wikipage/House Stayanoga;wikipage/OneWiki,wikipage/Gods,wikipage/Lolth,wikipage/Luthadel;wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Namfoodle,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Steel Inquisitor,wikipage/Order of Steel;wikipage/OneWiki,wikipage/Characters,wikipage/Venril Sathir,wikipage/Luthadel;wikipage/OneWiki,wikipage/AkumaFruits,wikipage/Leeran,wikipage/Sentient Rock Henry;wikipage/OneWiki,wikipage/Towns,wikipage/Nowa Huta,wikipage/Cave to Feywild;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar,wikipage/House Salazar Assassins,wikipage/Kalas;wikipage/OneWiki,wikipage/Quests;wikipage/OneWiki,wikipage/Items of Importance,wikipage/Kunark,wikipage/Southern Luthadel Dock,wikipage/Luthadel;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel,wikipage/House Stayanoga,wikipage/Luthadel;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel;wikipage/OneWiki,wikipage/Feywild Towns,wikipage/Korro Kurro,wikipage/Queen Torgga,wikipage/Korro Kurro;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Order of Steel,wikipage/Steel Inquisitor;wikipage/OneWiki,wikipage/Vehicles;wikipage/OneWiki,wikipage/Players,wikipage/Group Three Notes,wikipage/Marine HQ,wikipage/Marines;wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Namfoodle,wikipage/Ak'anon,wikipage/Namfoodle;wikipage/OneWiki,wikipage/Characters,wikipage/Venril Sathir,wikipage/Luthadel,wikipage/Execution of Quaal;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Gorda,wikipage/Leeran;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel,wikipage/Norrath;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel,wikipage/Execution of Quaal;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Krieger,wikipage/AkumaFruits
 wiki_wikilanguage = wikidpad_default_2_0
 tree_force_scratchpad_visibility = True
 further_wiki_words = 
