--- a/data/Evil Group Notes.wiki
+++ b/data/Evil Group Notes.wiki
@@ -693,4 +693,34 @@ Teleport back to the cave to the Material Plane
     -Cael told by [Croaker] through sending to kill the skeletons before they turn feral
     
     4 inquisitors and [Venril Sathir] approach
-        
+      -battle initiated  
+      
+++++Session 44
+   The group slays [Venril Sathir]
+     -proceeds to [The God Kings Palace]
+
+    [Edan] uses deck of many things (5 cards)
+      - loses magic items and artifacts
+      - brings back Regdar with a wish from the deck of many things
+      - Correllon becomes hostile toward Edan
+      - A devil becomes a sworn enemy of Edan (need to determine)   
+      
+    Group rescues the wife of House Stayanoga from the cells in Venril's Palace
+    
+    Grogar 
+      -Gains ownership of [Kaladim] via the deck of many things.
+      -gets Helm of Brilliance
+      -gains 25 2000g jewelry items
+    
+    Croaker gets a Dancing Sword (pg 161)
+    
+    Lightning's soul gets sucked into the void
+    
+    Vulcan loses all non-magic items
+    
+    Deck:
+    20,19,18,17,14,13,12,11,10,8,7,6,5,4,3,2,1
+         
+    Group teleports back to their ship at the Southern Luthadel Dock     
+    
+    Grogar stabs out his left itching eye and offers to [Gruumsh]
