--- a/data/Crones of Neriak.wiki
+++ b/data/Crones of Neriak.wiki
@@ -26,7 +26,11 @@ They have distaste for [Venril Sathir] for resisting their temptations.
 Spell Save DC 15
 Spell attack bonus +7
 
-    
+
+After the death of [Venril Sathir]
+    - crones travel to [Dun Morhen] and subjugate the creatures there to defend them  
+    - take particular interest in the Wyvern-Owlbear-Bulette-Humanoid Mistwraith and place the recently acquired soul of [Lightning] within it
+    - using [Asmodeus]'s portal as a trash room
     
     
     
