--- a/data/Gruumsh.wiki
+++ b/data/Gruumsh.wiki
@@ -4,7 +4,7 @@ God of destruction, currently sealed under a mountain near [Luthadel], causing a
 Held at bay by the god-emporer of Luthadel
 Oversees [Kunark]
 Symbol: Triangular Eye with bony protrusions
-Home Plane: Acheron
+Home Plane: [Acheron]
 
 When Released:
     -by [Venril Sathir] being slain:
