--- a/data/Crones of Neriak.wiki
+++ b/data/Crones of Neriak.wiki
@@ -2,6 +2,7 @@
 
 The crones of neriak are ancient, ugly, and vile, and have manipulated mortals for ages.
 They speak primordial.
+Servants of [Vecna]
 
 They have distaste for [Venril Sathir] for resisting their temptations. 
 -The hags were the ones who cursed him in echange for mastery of his Etherium power.
