--- a/data/Grogar.wiki
+++ b/data/Grogar.wiki
@@ -2,4 +2,4 @@
 
 Half Orc Monk who joined the party during the battle of mayara.
 
-consumed Dodo and Wood Fruits
+consumed Dodo and Wood Fruits (wood type pine)
