--- a/data/Lolth%27s Deck of Many Things.wiki
+++ b/data/Lolth%27s Deck of Many Things.wiki
@@ -4,3 +4,7 @@ Is branded with an eight pointed star that has a web motif on it's box.
 
 when any one player plays through the entire deck, [Lolth] will be released.
 The deck magically has cards for each person who uses it.
+
++++Cards Pulled by EVIL GROUP:
+20,19,18,17,16,15,14,13,12,11,10,9,8,7,6,5,4,3,2,1
+Cards left: NONE
