--- a/data/The God Kings Palace.wiki
+++ b/data/The God Kings Palace.wiki
@@ -54,6 +54,7 @@ G. [Venril Sathir]'s room
     -A stack of 10 Etherium ingots are nicely stacked on his desk
     -A row of 10 Etherium ingots are in a row under the foot of the bed
     -notes in draconic on the desk (determine writing)
+       -journal of a waning man, power mages have entered is realm and he must dispatch them, if I falter, [Head Bishop Skarjun] is to take my place, dress him in my robes, and maintain the hierarchy if you wish to survive the forces I have kept at bay.
     
 H. The Dungeon
     -A. Wife of Lord Stayanoga, Korinn is held here, to ensure Stayanoga doesn't find motivation to leave [Luthadel]
