--- a/data/Moloch.wiki
+++ b/data/Moloch.wiki
@@ -4,3 +4,4 @@ Pit Fiend Devil General
 Forced into the material plane with great straing from the god [Asmodeus]
 
 will constantly hunt [Edan], who's energies were felt across the planes (due to [Regdars Radiant Hilt])
+  - always has an ice chill around him, from living in the 8th hell of [Cania]
